--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,6 +10,9 @@ jobs:
         run: |
           pwd
           ls -a
+      - name: "Htop"
+        run: |
+          htop
       - name: multiline script
         run: |
           node -v
